src/test/deca/context/valid/tests/complet.deca
// Description:
//    Programme minimaliste utilisant une affectation.
//
// Resultats:
//    Aucun
//
// Historique:
//    cree le 01/01/2022

class A {
    protected int x;
    int getX(){
        return x;
    }

    void setX(){
        this.x = x;
    }
}
{
    A a =  new A();
    a.setX(1);
    println("a.getX() = ", a.getX());
}
