src/test/deca/context/invalid/53_Signature.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 	Ligne 18: ContextualError: Assignment error
// 
// Historique:
//    cree le 01/01/2022

class A {
	int f(int x) {
		return x;
	}
}
{
	A a = new A();
	// Doit etre refuse.
	println(a.f(1.0));
}
